--- a/src/app/pages/home/free-user-canvas/new-trait-page/new-trait-page.component.html
+++ b/src/app/pages/home/free-user-canvas/new-trait-page/new-trait-page.component.html
@@ -68,6 +68,7 @@
       [isDisabled]="post.PostImages.length > 0" 
       [mediaFiles]="post.PostImages"
       [videoRecDisable]="11"
+      [photoLibrary]="11"
       (filePathEvent)="addMedia($event)">
     </app-multiple-media-upload>
 
