--- a/src/app/core/components/image-cropper/image-cropper.component.html
+++ b/src/app/core/components/image-cropper/image-cropper.component.html
@@ -1,6 +1,14 @@
 <!-- image-cropper.component.html -->
 
 <!-- <input type="file" (change)="fileChangeEvent($event)" /> -->
+<ion-header class="ion-no-border">
+    <ion-toolbar class="display-flex ion-justify-content-center ion-align-items-center">
+      <ion-buttons slot="start">
+        <ion-icon name="chat-back">B</ion-icon>
+      </ion-buttons>
+      <ion-title>Crop Image</ion-title>
+    </ion-toolbar>
+</ion-header>
 
 <image-cropper
     [imageBase64]="myImage"
@@ -12,6 +20,6 @@
     (loadImageFailed)="loadImageFailed()"
 ></image-cropper>
 
-<img [src]="croppedImage" />
+<!-- <img [src]="croppedImage" /> -->
 
 <ion-button (click)="saveCroppedImage()">Save Cropped Image</ion-button>
