changes In ui 27

--- a/src/app/core/components/image-cropper/image-cropper.component.html
+++ b/src/app/core/components/image-cropper/image-cropper.component.html
@@ -13,5 +13,7 @@
 ></image-cropper>
 
 <img [src]="croppedImage" />
+<div style="display: flex; justify-content: center; align-items: center;">
 
-<ion-button (click)="saveCroppedImage()">Save Cropped Image</ion-button>
+<ion-button style="margin-bottom: 20px; width:266px ; height: 44px; font-size:20px ;" (click)="saveCroppedImage()">Save Cropped Image</ion-button>
+</div>
