--- a/src/app/core/components/mapLocation/mapLocation.component.html
+++ b/src/app/core/components/mapLocation/mapLocation.component.html
@@ -1,29 +1,29 @@
 <!-- <div id="map" #map_location></div> -->
 <!-- <button (click)="closeModal()">Close</button> -->
 
-<ion-header>
-  <ion-toolbar>
+<ion-header >
+  <!-- <ion-toolbar > -->
     <!-- <ion-title>
       Select Location
     </ion-title> -->
-    <ion-item>
-      <label for="searchInput">Search Location</label>
-      <input [(ngModel)]="eventLocation" placeholder="Enter location" id="searchInput" />
+    <ion-item style="display: flex; align-items: center; justify-content: center; text-align: center;">
+     
+      <input  style="background-color: #F0F5F7;  border-radius: 9px; border-color:#F0F5F7; width: 100%; height: 40px; padding-left:10px ; outline: none;" [(ngModel)]="eventLocation" placeholder=" Enter location" id="searchInput" />
       <!-- <ion-label stacked>Search Location</ion-label>
       <ion-input [(ngModel)]="searchInput" placeholder="Enter location" id="searchInput" (ngModelChange)="onSearchInputChange($event)" #searchInputField></ion-input> -->
     </ion-item>
     <!-- <ion-buttons slot="end">
       <ion-button (click)="closeModal()">Close</ion-button>
     </ion-buttons> -->
-  </ion-toolbar>
+  <!-- </ion-toolbar> -->
 </ion-header>
 
-<ion-content>
+<ion-content style="display: flex; position: relative;">
   <!-- Map container -->
   <div id="map" #map_location></div>
 
   <!-- Confirm Location button -->
   <div class="confirm_button">
-    <ion-button (click)="confirmLocation()">Confirm Location</ion-button>
+    <ion-button style="position: absolute; top: 60px; left: 15px;" (click)="confirmLocation()">Confirm Location</ion-button>
   </div>
 </ion-content>
