--- a/src/app/pages/sidemenu/finitee-services/service-alert/service-alert-main/service-alert-main.page.html
+++ b/src/app/pages/sidemenu/finitee-services/service-alert/service-alert-main/service-alert-main.page.html
@@ -44,6 +44,7 @@
   </ng-container>
 
 </ion-content>
-
-<ion-button (click)="viewMatchedResult()" style="text-transform: none;" shape="round" expand="full" class="save-button">
-  View all matches</ion-button>
+<div style="display: flex; align-items: center; justify-content: center; margin-bottom: 6px;">
+  <ion-button (click)="viewMatchedResult()" style="text-transform: none; font-size: 20px; width:336px ; height: 46px;" shape="round" expand="full" class="save-button">
+    View all matches</ion-button>
+</div>
