--- a/src/app/pages/sidemenu/finitee-services/service-available/service-available-view/service-available-view.page.html
+++ b/src/app/pages/sidemenu/finitee-services/service-available/service-available-view/service-available-view.page.html
@@ -18,8 +18,13 @@
         <h3>{{logInfo.DisplayName}}</h3>
         <p>3 mins ago</p>
       </ion-label>
-      <ion-label slot="end" class="fd-views-label">
+      <!-- <ion-label slot="end" class="fd-views-label">
         <p>300 views</p>
+        <ion-icon name="heat-map-icon"></ion-icon>
+      </ion-label> -->
+      <ion-label style="display: flex; text-align: center; justify-content: center; align-items: center; background-color: #F0F5F7;  width: 130px;
+      height: 34px; border-radius: 17px;" slot="end" class="fd-views-label">
+        <p style="font-size:14px ;">300 views</p>
         <ion-icon name="heat-map-icon"></ion-icon>
       </ion-label>
     </ion-item>
@@ -47,7 +52,7 @@
     </ion-item>
 
     <ion-item>
-      <ion-text class="desc" style="margin-bottom: 10px;">
+      <ion-text class="desc" style="margin-bottom: 10px; font-size: 15px;">
         {{serviceObj.Description}}
       </ion-text>
     </ion-item>
@@ -64,7 +69,7 @@
     <div style="margin-bottom: 10px;">
       <ion-label class="input-label">Viewable by</ion-label>
       <br>
-      <ion-label class="desc">
+      <ion-label style="font-size: 15px;" class="desc">
         {{serviceObj.VisibleTo}}
       </ion-label>
     </div>
@@ -72,14 +77,14 @@
     <div style="margin-bottom: 10px;">
       <ion-label class="input-label">Location</ion-label>
       <br>
-      <ion-label class="desc">
+      <ion-label style="font-size: 15px;" class="desc">
         {{serviceObj.Location}} location
       </ion-label>
     </div> 
     <div style="margin-bottom: 10px;">
       <ion-label class="input-label">Offset location</ion-label>
       <br>
-      <ion-label class="desc">
+      <ion-label style="font-size: 15px;" class="desc">
         <ng-container *ngIf="!serviceObj.LocationOffset">Disabled</ng-container>
         <ng-container *ngIf="serviceObj.LocationOffset">Enabled</ng-container>
       </ion-label>
