--- a/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.html
+++ b/src/app/pages/sidemenu/events/create-edit-event/create-edit-event.page.html
@@ -280,11 +280,11 @@
         name="AddressLine2" [(ngModel)]="eventItem.AddressLine2" maxlength="30"></ion-input>
     </ion-item>
     <!-- address line 3 -->
-    <ion-label class="input-label"> Address line 3</ion-label>
+    <!-- <ion-label class="input-label"> Address line 3</ion-label>
     <ion-item color="none" class="input" lines="none">
       <ion-input autocapitalize="on" placeholder="address line 3" type="text" #AddressLine3="ngModel"
         name="AddressLine3" [(ngModel)]="eventItem.AddressLine3" maxlength="30"></ion-input>
-    </ion-item>
+    </ion-item> -->
 
     <!-- images files select -->
     <app-multiple-media-upload [mediaFiles]="eventItem.EventImages"
@@ -305,8 +305,8 @@
     </ion-item>
 
     <!-- location -->
-    <ion-button (click)="openMap()">SET LOCATION</ion-button>
-    <p>{{eventLocation || "Location not set" }}</p>
+    <ion-button style="margin-left: 10px;" (click)="openMap()">SET LOCATION</ion-button>
+    <p style="margin-left: 10px; color: red;">{{eventLocation || "Location not set!!" }}</p>
     <!-- <ion-radio-group name="location" [(ngModel)]="eventItem.location" (ionChange)="getLatlng()">
       <ion-item lines="none" class="ion-no-margin">
         <ion-label class="locationInput">Location:</ion-label>
