--- a/src/app/pages/sidemenu/finitee-services/service-available/service-available-list/service-available-list.page.html
+++ b/src/app/pages/sidemenu/finitee-services/service-available/service-available-list/service-available-list.page.html
@@ -1,7 +1,8 @@
 <ion-header class="ion-no-border">
   <ion-toolbar class="display-flex ion-align-items-center">
     <ion-buttons slot="start">
-      <app-notification-icon></app-notification-icon>
+      <ion-back-button icon="assets/icons/screen-wise-icons/Canvas screens icons as svg/Back icon.svg">
+      </ion-back-button>
     </ion-buttons>
     <ion-title>Services Available</ion-title>
     <ion-buttons slot="end">
@@ -42,11 +43,11 @@
               </ion-label>
               <ion-buttons>
                 <ion-button class="fi-delete-btn" shape="round" (click)="delete(i.Id) ; $event.stopPropagation();">
-                  <ion-icon style="font-size: 13px;" name="delete"></ion-icon>
+                  <ion-icon style="font-size: 18px;" name="delete"></ion-icon>
                 </ion-button>
                 &nbsp;
                 <ion-button class="fi-edit-btn" shape="round" (click)="edit(i.Id) ; $event.stopPropagation();">
-                  <ion-icon style="font-size: 13px;" name="edit"></ion-icon>
+                  <ion-icon style="font-size: 18px;" name="edit"></ion-icon>
                 </ion-button>
               </ion-buttons>
             </ion-card-content>
