changes In ui 2/03/24

--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content class="safe–area" style="--ion-safe-area-top: env(safe-area-inset-top);">
 
   <div>
     <ion-icon class="backicon" *ngIf="step !== 1" name="chevron-back-outline" (click)="back()"></ion-icon>
