--- a/src/app/pages/sidemenu/account-management/account-management.component.html
+++ b/src/app/pages/sidemenu/account-management/account-management.component.html
@@ -10,11 +10,11 @@
 
 <ion-content>
   <ng-container>
-    <ion-list>
+    <ion-list style="margin-top: 20px; margin-bottom: 10px;">
       <ion-item lines="none">
         
-        <ion-text>
-          <h3>Name </h3> 
+        <ion-text style="margin-left: 7px;">
+          <h3 style="color: #505050; ">Name </h3> 
         </ion-text>
         <div class="edit-button">
           <button (click)="edit('edit-name')"> 
@@ -26,8 +26,8 @@
         </ion-button> -->
       </ion-item>
       <ion-item lines="none">
-        <ion-text>
-          <h3>Username</h3>
+        <ion-text  style="margin-left: 7px;">
+          <h3 style="color: #505050;">Username</h3>
         </ion-text>
         <div class="edit-button">
           <button (click)="edit('edit-username')"> 
@@ -36,8 +36,8 @@
         </div>
       </ion-item>
       <ion-item lines="none">
-        <ion-text>
-          <h3>Password</h3>
+        <ion-text  style="margin-left: 7px;">
+          <h3 style="color: #505050;">Password</h3>
         </ion-text>
         <div class="edit-button">
           <button (click)="edit('edit-password')"> 
@@ -46,8 +46,8 @@
         </div>
       </ion-item>
       <ion-item lines="none">
-        <ion-text>
-          <h3>Address</h3>
+        <ion-text  style="margin-left: 7px;">
+          <h3 style="color: #505050;">Address</h3>
         </ion-text>
         <div class="edit-button">
           <button (click)="edit('edit-address')"> 
@@ -57,17 +57,17 @@
       </ion-item>
     </ion-list>
 
-    <ion-toolbar>
+    <ion-toolbar style="border-radius: 0px;">
       <ion-buttons slot="primary">
         <!-- <ion-button (click)="navigateToAnotherRoute('sonar')"> <img src="../../../../assets/icon/fin/forward_arrow.svg"> </ion-button> -->
       </ion-buttons>
-      <ion-text>Contact Info</ion-text>
+      <ion-text style="color: #505050; border-radius: 0px;">Contact Info</ion-text>
     </ion-toolbar>
 
     <ion-list>
       <ion-item lines="none">
-        <ion-text>
-          <h3>Email </h3> 
+        <ion-text  style="margin-left: 7px;">
+          <h3 style="color: #505050;">Email </h3> 
         </ion-text>
         <div class="edit-button">
           <button (click)="edit('edit-name')"> 
@@ -76,8 +76,8 @@
         </div>
       </ion-item>
       <ion-item>
-        <ion-text>
-          <h3>Phone</h3>
+        <ion-text  style="margin-left: 7px;">
+          <h3 style="color: #505050;">Phone</h3>
         </ion-text>
         <div class="edit-button">
           <button (click)="edit('edit-name')"> 
