--- a/src/app/pages/sidemenu/account-management/edit-address/edit-address.component.html
+++ b/src/app/pages/sidemenu/account-management/edit-address/edit-address.component.html
@@ -7,7 +7,10 @@
     <ion-title>Edit Address</ion-title>
   </ion-toolbar>
 </ion-header>
-
+<div style="display: flex; flex-direction: column; justify-content: center; text-align: center;">
+  <p style="color: #758EA8; font-size: 17px; margin-top: 25px; padding: 0 10px 0 10px;">You are about to change your address. <br>This feature is available only once every 60 days</p>
+  
+</div>
 
 <form>
   <ion-item lines="none"  style="margin-left: 14px;margin-right: 14px; margin-bottom: -15px;">
