--- a/src/app/pages/sidemenu/account-management/edit-name/edit-name.component.scss
+++ b/src/app/pages/sidemenu/account-management/edit-name/edit-name.component.scss
@@ -156,12 +156,7 @@
        position: absolute !important;
      }
      
-     // .logo-img {
-     //   width: 83px;
-     //   height: 68px;
-     //   margin: auto;
-     //   display: block;
-     //   margin-top: 30px;
-     //   align-self: center;
-     // }
-     
+  
+    //  .ion-page{
+    //   --justify-content: flex-start !important;
+    //  }
