--- a/src/app/pages/sidemenu/account-management/edit-password/edit-password.component.html
+++ b/src/app/pages/sidemenu/account-management/edit-password/edit-password.component.html
@@ -8,6 +8,10 @@
   </ion-toolbar>
 </ion-header>
 
+<div style="display: flex; flex-direction: column; text-align: center; margin-top: 20px;">
+  <h1 style="color: #505050; font-size: 17px; margin-bottom: 0px; margin-top: 0px;">Last Updated</h1>
+  <p style="color: #285078; font-size: 18px; margin-bottom: 20px;">30 days ago</p>
+</div>
 
 <form>
   <ion-item lines="none"  style="margin-left: 14px;margin-right: 14px; margin-bottom: -15px;">
