--- a/src/app/pages/sidemenu/account-management/edit-username/edit-username.component.html
+++ b/src/app/pages/sidemenu/account-management/edit-username/edit-username.component.html
@@ -13,6 +13,11 @@
   <ion-item lines="none"  style="margin-left: 14px;margin-right: 14px; margin-bottom: -15px;">
     <p style="color: red;font-size: medium;" ></p>
   </ion-item>
+  <div style="display: flex; flex-direction: column; justify-content: center; text-align: center;">
+    <p style="color: #758EA8; font-size: 17px; margin-top: 25px; padding: 0 10px 0 10px;">You are about to change your Username. <br>This feature is available only once every 60 days</p>
+    <h2 style="color: #505050; font-size: 17px; margin-bottom: 5px;">Current UserName</h2>
+    <p style="color: #285078; font-size: 18px; margin-top: 0px; margin-bottom: 50px;">Janvi Mehta</p>
+  </div>
 
   <!-- <ion-input class="input1" (ionChange) = "onEmailInputChange($event)" formControlName="email" placeholder="Email/Phone number" type="inputTypePhone ? number:email" name="email"></ion-input> -->
   <ion-item lines="none" class="fi-padding" >
@@ -26,6 +31,6 @@
     <!-- <span slot="error">{{errorMsgGrp.password}}</span> -->
     <!-- <re-captcha [(ngModel)]="captcha" name="captcha" required #captchaControl="ngModel"></re-captcha> -->
     <!-- <re-captcha formControlName="recaptchaReactive"></re-captcha> -->
-  <ion-button  color="primary" class="lgn-button" (click)="submit()">Continue</ion-button>
+  <ion-button style="font-size: 20px;"  color="primary" class="lgn-button" (click)="submit()">Continue</ion-button>
   <!-- <ion-button *ngIf="inputTypePhone" color="primary" class="lgn-button" type="button" (click)="sendSignInOTP()">Sign in using OTP</ion-button> -->
 </form>
