--- a/src/app/pages/sidemenu/legal/privacy-policy/privacy-policy.component.html
+++ b/src/app/pages/sidemenu/legal/privacy-policy/privacy-policy.component.html
@@ -21,19 +21,23 @@
 
       <div>
         <div>
-          Your privacy is important to us and we, at Finitee, are committed to protect all our users. In order to achieve that, we have adopted some policies which shall be applicable to all personal information and other information that users provide to us while signing up and using our app.
-          Finitee’s privacy policy is inclusive of the User Agreement, the Terms of Service and the Community Standards which we have set for ourselves and for our users. As our users log in to our app, the Privacy Policy shall be reviewed and accepted as it governs your use of the Finitee App.
-          It is informed that the Privacy Policy is a binding legal agreement between Finitee and our users. However, the Privacy Policy of Finitee shall not apply to users who voluntarily share their information to third party sites or apps.
-          The information Finitee collects depends on our user’s usage of the Finitee App. The Privacy Policy for all the users is incorporated below:  
+          <p style="font-size: 16px;">
+            Your privacy is important to us and we, at Finitee, are committed to protect all our users. In order to achieve that, we have adopted some policies which shall be applicable to all personal information and other information that users provide to us while signing up and using our app.
+            Finitee’s privacy policy is inclusive of the User Agreement, the Terms of Service and the Community Standards which we have set for ourselves and for our users. As our users log in to our app, the Privacy Policy shall be reviewed and accepted as it governs your use of the Finitee App.
+            It is informed that the Privacy Policy is a binding legal agreement between Finitee and our users. However, the Privacy Policy of Finitee shall not apply to users who voluntarily share their information to third party sites or apps.
+            The information Finitee collects depends on our user’s usage of the Finitee App. The Privacy Policy for all the users is incorporated below:  
+          </p>
+         
           <br>
           <br>
-          <b> <a routerLink="#">1. Data our user provides to us</a> </b>
-          <div>Finitee collects information of the users in the manner that the users choose to use the App. It is the legal obligation of Finitee to retain the data of our user </div>
+          <b style="font-size: 20px; margin-bottom: 5px; "> <a routerLink="#" style="text-decoration: none;">1. Data our user provides to us</a> </b>
+          <div style="font-size: 16px;">Finitee collects information of the users in the manner that the users choose to use the App. It is the legal obligation of Finitee to retain the data of our user </div>
             
             The following are mandatory for us to collect until which time our users use our Services.
 
             <br>
-            <li>First name</li>
+            <ol style=" padding-left: 17px; font-size: 16px; display: flex; flex-direction: column; gap: 10px;">
+              <li>First name</li>
             <li>Last name</li>
             <li>Phone number including Country Code</li>
             <li>Email Id</li>
@@ -47,74 +51,76 @@
             <li>Finitee, after due permission from its Users, shall collect information about the Users location to assist with connection recommendations to the Users.</li>
             <li>As it is accepted worldwide, Finitee, after due permission from the User, shall use cookies and other information to collect information about the User activity, browser, and device.</li>
             <li>Finitee shall collect proof of Business existence from Businesses and proof of Nonprofit from Nonprofits during their account registration and shall keep this information confidential.</li>
+            </ol>
+            
             <br>
-            <b> <a routerLink="#">2. Using of Information we receive from our Users</a> </b>
+            <b> <a routerLink="#" style="font-size: 20px; margin-bottom: 5px; text-decoration: none;">2. Using of Information we receive from our Users</a> </b>
 
-            <div>Finitee strives to protect its User’s Privacy. Furthermore, Finitee prohibits its officials and staff from selling any information to any third party. Finitee only collects information from Users to enhance their productivity and their ease of using the App and provide world class services to its Users. Here are the ways Finitee uses the information:</div>
+            <div style="font-size: 16px;">Finitee strives to protect its User’s Privacy. Furthermore, Finitee prohibits its officials and staff from selling any information to any third party. Finitee only collects information from Users to enhance their productivity and their ease of using the App and provide world class services to its Users. Here are the ways Finitee uses the information:</div>
 
-            <li>Creation of accounts for its Users.</li>
-            <li>Recommendation of connections, listings from all the users, posts and enhancement of location (heat map).</li>
-            <li>Finitee ensures the safety and security of our Users and ensures that the App is in compliance with the laws and regulations.</li>
-            <li>Development and improvement of our algorithms including those for personalization, augmented reality, fairness and inclusivity, and to prevent abuse or other Terms of Service violations.</li>
-            <li>Enhance safety and security of our services.</li>
-            <li>Conduct research to better understand our Users and general consumer interests and trends, including the ways our services are used. </li>
-            <li>Send you communication, via email, SMS, or other messaging platforms, where permitted. </li>
-            <li>Monitor and analyse the Users trends and usage.</li>
-            <li>Personalising our services by recommending connections, listings etc.</li>
-
-            <br>
-
-            <b> <a routerLink="#">3. Sharing of User information by Finitee</a> </b>
-            <br>
-            <div>Finitee shall always prioritise the privacy of information of its Users, however sometimes, we may need to share the information out of necessity to provide our services or upon having no other option as mandated by the law. The categories of the same are as follows: </div>
-            <br>
-            <b>With Finitee Users</b>
-            <li>Finitee shares information with other users with regard to your First name, Last name, Username, profile picture and certain other details as mandated by you as per the User’s privacy setting.</li>
-            <li>Information on your interaction with connections and the listings or the posts and the contents you have uploaded or beamed.</li>
-            <li>Information of the device used by the User including but not limited to the operating system, device type etc. to help with updates and other vital features of the Finitee App</li>
-
-            <br>
-            <b>With affiliates</b>
-            <div>Finitee may share information with its entities in accordance with the laws and regulations regarding the associates of Finitee.</div>
-
-            <b>Law enforcement: </b>
-            <div>Finitee will fully comply with the law and shall share any information of any User as mandated by the law enforcers by the medium of any notice, court order etc.</div>
-
-            <b>Change in Ownership</b>
-            <div>In the event of a merger, acquisition, reorganization or sale of assets, or bankruptcy, Finitee may share, sell or transfer information about you. This Privacy Policy would apply to all transferred information. </div>
+            <li style="font-size: 16px; margin-top: 10px;">Creation of accounts for its Users.</li>
+            <li style="font-size: 16px; margin-top: 10px;">Recommendation of connections, listings from all the users, posts and enhancement of location (heat map).</li>
+            <li style="font-size: 16px; margin-top: 10px;">Finitee ensures the safety and security of our Users and ensures that the App is in compliance with the laws and regulations.</li>
+            <li style="font-size: 16px; margin-top: 10px;">Development and improvement of our algorithms including those for personalization, augmented reality, fairness and inclusivity, and to prevent abuse or other Terms of Service violations.</li>
+            <li style="font-size: 16px; margin-top: 10px;">Enhance safety and security of our services.</li>
+            <li style="font-size: 16px; margin-top: 10px;">Conduct research to better understand our Users and general consumer interests and trends, including the ways our services are used. </li>
+            <li style="font-size: 16px; margin-top: 10px;">Send you communication, via email, SMS, or other messaging platforms, where permitted. </li>
+            <li style="font-size: 16px; margin-top: 10px;">Monitor and analyse the Users trends and usage.</li>
+            <li style="font-size: 16px; margin-top: 10px;">Personalising our services by recommending connections, listings etc.</li>
 
             <br>
 
-            <b> <a routerLink="#">4. Data retention</a> </b>
-            <div>Finitee may retain the information and data of the User based on the usage of the App as well as other information which Finitee is legally compelled to collect in accordance with the retention policies applicable under the law of the land.
+            <b> <a routerLink="#" style="font-size: 20px; margin-bottom: 5px; text-decoration: none;">3. Sharing of User information by Finitee</a> </b>
+            <br>
+            <div style="font-size: 16px;">Finitee shall always prioritise the privacy of information of its Users, however sometimes, we may need to share the information out of necessity to provide our services or upon having no other option as mandated by the law. The categories of the same are as follows: </div>
+            <br>
+            <b style="font-size: 20px;">With Finitee Users</b>
+            <li style="font-size: 16px; margin-top: 10px;">Finitee shares information with other users with regard to your First name, Last name, Username, profile picture and certain other details as mandated by you as per the User’s privacy setting.</li>
+            <li style="font-size: 16px; margin-top: 10px;">Information on your interaction with connections and the listings or the posts and the contents you have uploaded or beamed.</li>
+            <li style="font-size: 16px; margin-top: 10px;">Information of the device used by the User including but not limited to the operating system, device type etc. to help with updates and other vital features of the Finitee App</li>
+
+            <br>
+            <b style="font-size: 20px;">With affiliates</b>
+            <div style="font-size: 16px;">Finitee may share information with its entities in accordance with the laws and regulations regarding the associates of Finitee.</div>
+
+            <b style="font-size: 20px;">Law enforcement: </b>
+            <div style="font-size: 16px;">Finitee will fully comply with the law and shall share any information of any User as mandated by the law enforcers by the medium of any notice, court order etc.</div>
+
+            <b style="font-size: 20px;">Change in Ownership</b>
+            <div style="font-size: 16px;">In the event of a merger, acquisition, reorganization or sale of assets, or bankruptcy, Finitee may share, sell or transfer information about you. This Privacy Policy would apply to all transferred information. </div>
+
+            <br>
+
+            <b> <a routerLink="#" style="font-size: 20px; margin-bottom: 5px; text-decoration: none;">4. Data retention</a> </b>
+            <div style="font-size: 16px;">Finitee may retain the information and data of the User based on the usage of the App as well as other information which Finitee is legally compelled to collect in accordance with the retention policies applicable under the law of the land.
               <br>
               Finitee declares to retain the information of its Users for a reasonable period of time and or which is statutorily required to be maintained as per applicable law/ or arising out of legitimate purposes. Finitee shall take appropriate steps to destroy or permanently de-identify/anonymise any personal information that is no longer required for the purpose of Finitee which was received by its Users from time to time.  
             </div>
 
             <br>
 
-            <b> <a routerLink="#">5. Any amendment or update to the privacy policy</a> </b>
-            <div>Any changes/ amendment to the privacy policy from time to time shall be notified to its Users by Finitee so that the Users are always aware of what information Finitee collects, uses and under what circumstances. Users are advised to periodically review the privacy page of Finitee to be aware of the latest information on our privacy practices.</div>
+            <b> <a routerLink="#" style="font-size: 20px; margin-bottom: 5px; text-decoration: none;">5. Any amendment or update to the privacy policy</a> </b>
+            <div style="font-size: 16px;">Any changes/ amendment to the privacy policy from time to time shall be notified to its Users by Finitee so that the Users are always aware of what information Finitee collects, uses and under what circumstances. Users are advised to periodically review the privacy page of Finitee to be aware of the latest information on our privacy practices.</div>
 
             <br>
 
-            <b> <a routerLink="#">6. Privacy Policy in consonance with other terms</a> </b>
-            <div>This Privacy Policy shall be read along with the Terms and Conditions as well as the Community Guidelines of Finitee as incorporated in its App.</div>
+            <b> <a routerLink="#" style="font-size: 20px; margin-bottom: 5px; text-decoration: none;">6. Privacy Policy in consonance with other terms</a> </b>
+            <div style="font-size: 16px;">This Privacy Policy shall be read along with the Terms and Conditions as well as the Community Guidelines of Finitee as incorporated in its App.</div>
 
             <br>
 
-            <b> <a routerLink="#">7. User’s control over their own information</a> </b>
-            <div>Any user will be able to:</div>
-            <li>Delete their Account through the settings in the applications or by contacting customer support;</li>
-            <li>Understand who we share your data with by contacting customer support;</li>
-            <li>Correct their information by using the controls in the application or by contacting customer support</li>
-            <li>Appeal a decision related to their information by contacting customer support; </li>
-            <li>Ask a question about our privacy practices by contacting customer support</li>
+            <b> <a routerLink="#" style="font-size: 20px; margin-bottom: 5px; text-decoration: none;">7. User’s control over their own information</a> </b>
+            <div style="font-size: 20px;">Any user will be able to:</div>
+            <li style="font-size: 16px; margin-top: 10px;">Delete their Account through the settings in the applications or by contacting customer support;</li>
+            <li style="font-size: 16px; margin-top: 10px;">Understand who we share your data with by contacting customer support;</li>
+            <li style="font-size: 16px; margin-top: 10px;">Correct their information by using the controls in the application or by contacting customer support</li>
+            <li style="font-size: 16px; margin-top: 10px;">Appeal a decision related to their information by contacting customer support; </li>
+            <li style="font-size: 16px; margin-top: 10px;">Ask a question about our privacy practices by contacting customer support</li>
 
             <br>
 
-            <b> <a routerLink="#">8. Contact</a> </b>
-            <div>For any reason or issue with regards to the Privacy Policy, we are reachable by all Users at <a href="mailto: support@finitee.com">support@finitee.com</a></div>
+            <b> <a routerLink="#" style="font-size: 20px; margin-bottom: 5px; text-decoration: none;">8. Contact</a> </b>
+            <div style="font-size: 16px; margin-top: 10px;">For any reason or issue with regards to the Privacy Policy, we are reachable by all Users at <a href="mailto: support@finitee.com">support@finitee.com</a></div>
         </div>
       </div>
 
