changes In ui 2/03/24 2ndpush

--- a/src/app/pages/auth/login/login.page.html
+++ b/src/app/pages/auth/login/login.page.html
@@ -1,6 +1,6 @@
-<ion-content class="safe–area" style="--ion-safe-area-top: env(safe-area-inset-top);">
+<ion-content class="safe--area " style="--ion-safe-area-top: env(safe-area-inset-top);">
 
-  <div>
+  <div class="main_loginodiv">
     <ion-icon class="backicon" *ngIf="step !== 1" name="chevron-back-outline" (click)="back()"></ion-icon>
     <ng-container *ngIf="step==LOGIN_STEP.LOGIN">
       <ion-icon class="logo-img" src="assets/images/login1.svg"></ion-icon>
