--- a/src/app/pages/sidemenu/legal/community-guidelines/community-guidelines.component.html
+++ b/src/app/pages/sidemenu/legal/community-guidelines/community-guidelines.component.html
@@ -20,7 +20,7 @@
       ">
 
       <div>
-        <div style="font-size: 16px;">At Finitee, we contribute to the public by empowering them to express themselves. With the aim of creating a healthy community to provide pleasant and effective communication within Finitee, we have established some simple rules, which we would appreciate being followed and complied with. 
+        <div style="font-size: 16px; display: flex; text-align: justify;">At Finitee, we contribute to the public by empowering them to express themselves. With the aim of creating a healthy community to provide pleasant and effective communication within Finitee, we have established some simple rules, which we would appreciate being followed and complied with. 
           These Standards apply to all content including but not limited to posts, chat, traits, service listings, sales listing, events etc. on Finitee; and to all users of Finitee. We are particularly sensitive to content or behaviour that poses a risk of severe harm to our users, and reserve the right to take immediate, permanent action against users engaging in such behaviour.
           Our Community Standards are designed to help ensure that you, and all our users, use our services safely, and must be taken seriously. They are part of our Terms of Service and our Privacy Policy (together the “User Agreement”). If you don’t agree with any part of the User Agreement, including the Community Standards, then it might be that Finitee isn’t for you. 
           <br>
@@ -31,7 +31,7 @@
 
         <br>
 
-        <div>
+        <div style="display: flex; flex-direction: column; text-align: justify;">
           <b><a routerLink="#" style="font-size: 20px; text-decoration: none;">Sexual content</a> </b>
           <li style="font-size: 16px;">Finitee prohibits any activity that involves sexual exploitation or abuse of a minor, including sharing child sexual exploitation or abuse imagery, grooming, or sexual extortion (sextortion), or the sexualisation of children. We report all identified instances of child sexual exploitation to authorities, including attempts to engage in such conduct. </li>
           <li style="font-size: 16px;">Finitee prohibits promoting, distributing, or sharing pornographic content, as well as commercial activities that relate to pornography or sexual interactions (whether online or offline). </li>
@@ -39,7 +39,7 @@
 
         <br>
 
-        <div>
+        <div style="display: flex; flex-direction: column; text-align: justify;">
           <b><a routerLink="#" style="font-size: 20px;  text-decoration: none;">Harassment & bullying</a> </b>
           <li style="font-size: 16px; margin-top: 10px;">Finitee prohibits bullying or harassment of any kind. This extends to all forms of sexual harassment, including sending unwanted sexually explicit, suggestive, or nude images to other users. If someone blocks you, you may not contact them from another Finitee User account.</li>
           <li style="font-size: 16px; margin-top: 10px;">Bullying and harassment happens in many places and comes in many different forms, from making threats and releasing personally identifiable information to making hate speech and making unwanted malicious contact. Finitee does not tolerate this kind of behaviour because it prevents people from feeling safe and respected</li>
@@ -47,7 +47,7 @@
 
         <br>
 
-        <div>
+        <div style="display: flex; flex-direction: column; text-align: justify;">
           <b> <a routerLink="#" style="font-size: 20px;  text-decoration: none;">Threats, violence and harm</a> </b>
           <li style="font-size: 16px; margin-top: 10px;">Encouraging or engaging in violent or dangerous behaviour is prohibited. Never intimidate or threaten to harm a person, a group of people, or someone’s property.</li>
           <li style="font-size: 16px; margin-top: 10px;">We don’t allow the glorification of self-harm, including the promotion of self-injury, suicide, or eating disorders.</li>
@@ -55,7 +55,7 @@
 
         <br>
 
-        <div>
+        <div style="display: flex; flex-direction: column; text-align: justify;">
           <b> <a routerLink="#" style="font-size: 20px;  text-decoration: none;">Harmful, false or deceptive information</a> </b>
           <li style="font-size: 16px; margin-top: 10px;">Finitee prohibits spreading false information that causes harm or is malicious, such as denying the existence of tragic events, unsubstantiated medical claims, undermining the integrity of civic processes, or manipulating content for false or misleading purposes (whether through generative AI or through deceptive editing).</li>
           <li style="font-size: 16px; margin-top: 10px;">Finitee prohibits users from pretending to be someone (or something) that they are not, or attempting to deceive people about who they are. This includes impersonating friends, celebrities, public figures, brands, or other people or organizations for harmful, non-satirical purposes.</li>
@@ -65,7 +65,7 @@
 
         <br>
 
-        <div>
+        <div style="display: flex; flex-direction: column; text-align: justify;">
           <b> <a routerLink="#" style="font-size: 20px;  text-decoration: none;">Illegal or regulated activities</a> </b>
           <li style="font-size: 16px; margin-top: 10px;">Finitee prohibits its users to send or post content that’s illegal in your jurisdiction, or to engage in any illegal activity. This includes promoting, facilitating, or participating in criminal activity, such as buying, selling, exchanging, or facilitating sales of illegal or regulated drugs, contraband (such as child sexual exploitation or abuse imagery), weapons, or counterfeit goods or documents. It also includes promoting or facilitating any form of exploitation, including sex trafficking, labor trafficking, or other human trafficking.</li>
           <li style="font-size: 16px; margin-top: 10px;">Finitee prohibits the illegal promotion of regulated goods or industries, including unauthorized promotion of gambling, tobacco or vape products, and alcohol.</li>
@@ -73,7 +73,7 @@
 
         <br>
 
-        <div>
+        <div style="display: flex; flex-direction: column; text-align: justify;">
           <b> <a routerLink="#" style="font-size: 20px;  text-decoration: none;">Hateful content, terrorism and violent extremism</a></b>
           <li style="font-size: 16px; margin-top: 10px;">Terrorist organizations, violent extremists, and hate groups are prohibited from using our platform. We have no tolerance for content that advocates or advances terrorism or violent extremism.</li>
           <li style="font-size: 16px; margin-top: 10px;">Hate speech or content that demeans, defames, or promotes discrimination or violence on the basis of race, color, caste, ethnicity, national origin, religion, sexual orientation, gender, gender identity, disability, or veteran status, immigration status, socio-economic status, age, weight, or pregnancy status is prohibited.</li>
@@ -81,7 +81,7 @@
 
         <br>
 
-        <div>
+        <div style="display: flex; flex-direction: column; text-align: justify;">
           <b> <a routerLink="#" style="font-size: 20px;  text-decoration: none;">Respecting intellectual property</a> </b>
           <li style="font-size: 16px; margin-top: 10px;">Finitee takes intellectual property rights of a user or any third party very seriously. We ask that you respect other people's copyrights, trademarks and other legal rights. We are committed to helping people and organisations promote and protect their intellectual property rights.</li>
           <li style="font-size: 16px; margin-top: 10px;">You may therefore not share content that violates others’ intellectual property including but not limited to copyrights trademarks etc.</li>
@@ -89,7 +89,7 @@
 
         <br>
 
-        <div>
+        <div style="display: flex; flex-direction: column; text-align: justify;">
           <b> <a routerLink="#" style="font-size: 20px;  text-decoration: none;">How to submit a report</a> </b>
           <li style="font-size: 16px; margin-top: 10px;">You can report any violation of these Community Standards directly through the report section of the Finitee app or via email to our support team. Finitee’s Support Team shall review the report and reply if needed. We may use your contact information, including your username, full name, and email address, to get in contact with you.</li>
           <li style="font-size: 16px; margin-top: 10px;">Whilst reporting any violation, the users should include a screenshot of the content or account that the user believes is in violation of the Community Standards.</li>
@@ -97,7 +97,7 @@
 
         <br>
 
-        <div>
+        <div style="display: flex; flex-direction: column; text-align: justify;">
           <b> <a routerLink="#" style="font-size: 20px;  text-decoration: none;">What happens after you submit a report?</a> </b>
           <li style="font-size: 16px; margin-top: 10px;">Any behavior, activity, or content that Finitee believes is contrary to the Community Standards may be sanctioned, either temporarily or permanently.</li>
           <li style="font-size: 16px; margin-top: 10px;">As per the terms and conditions of Finitee, we have the right to monitor the content and the use of the App, at any time, and at our discretion, in order to verify compliance with the Community Standards and the Terms of Use. Our decision as to whether there is a violation of the Community Standards is final.</li>
