--- a/src/app/pages/sidemenu/help/report/report.component.scss
+++ b/src/app/pages/sidemenu/help/report/report.component.scss
@@ -156,6 +156,10 @@ ion-title {
     & ion-button {
       --box-shadow: none;
       margin-top: 0;
+      height: 46px;
+      width: 336px;
+      font-size: 20px;
+      margin-bottom: 20px;
     }
   }
 
