changes In ui 2/03/24 4th

--- a/src/app/pages/sidemenu/help/faqs/faqs.component.scss
+++ b/src/app/pages/sidemenu/help/faqs/faqs.component.scss
@@ -71,6 +71,7 @@ ion-content {
             font: normal normal 300 16px/21px SF Pro Display;
             letter-spacing: 0.22px;
             color: #285078;
+            font-weight: 400;
            
           }
         }
